{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 621,
  "lineage": "adb45ec4-d318-2e33-f483-10e9a32fbc1f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k1_kube_instance_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb2dd0b481d4dc1a",
            "arn": "arn:aws:ec2:eu-west-2:799980351101:instance/i-07a95de92e19096b7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k1-sts-instance-profile",
            "id": "i-07a95de92e19096b7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "k1-sshkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-071aad9e7675431fe",
            "private_dns": "ip-10-0-1-106.eu-west-2.compute.internal",
            "private_ip": "10.0.1.106",
            "public_dns": "ec2-3-9-17-227.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.9.17.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0343c436bf353e639",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e0f521a684f77cd",
            "tags": {
              "Account": "799980351101",
              "InfraName": "k1",
              "Name": "k1-kube1.localdomain",
              "Owner": "arn:aws:iam::799980351101:user/david",
              "User": "AIDA3UQULNZ67DB2MUL5O"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0040084a2cf7f4e7e",
              "sg-00784a9c4f9bc1591",
              "sg-079acd7c4da2920bc",
              "sg-0aa28f6268cec484b"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.sts-instance-profile",
            "aws_security_group.cloud-ssh",
            "aws_security_group.k1_security_group",
            "aws_security_group.web-public-egress",
            "aws_security_group.web-public-ingress",
            "aws_subnet.k1_public_subnet",
            "data.aws_ami.rhel_7_7_aws_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k1_kube_instance_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fb2dd0b481d4dc1a",
            "arn": "arn:aws:ec2:eu-west-2:799980351101:instance/i-0d463f3dcdc429edc",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "k1-sts-instance-profile",
            "id": "i-0d463f3dcdc429edc",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "k1-sshkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b9f7f37a84788445",
            "private_dns": "ip-10-0-1-184.eu-west-2.compute.internal",
            "private_ip": "10.0.1.184",
            "public_dns": "ec2-35-177-201-6.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.201.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a7a48cd2c556727c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e0f521a684f77cd",
            "tags": {
              "Account": "799980351101",
              "InfraName": "k1",
              "Name": "k1-kube2.localdomain",
              "Owner": "arn:aws:iam::799980351101:user/david",
              "User": "AIDA3UQULNZ67DB2MUL5O"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0040084a2cf7f4e7e",
              "sg-00784a9c4f9bc1591",
              "sg-079acd7c4da2920bc",
              "sg-0aa28f6268cec484b"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.sts-instance-profile",
            "aws_security_group.cloud-ssh",
            "aws_security_group.k1_security_group",
            "aws_security_group.web-public-egress",
            "aws_security_group.web-public-ingress",
            "aws_subnet.k1_public_subnet",
            "data.aws_ami.rhel_7_7_aws_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-03e88b11e416c8653",
            "owner_id": "799980351101",
            "tags": {
              "Account": "799980351101",
              "InfraName": "k1",
              "Owner": "arn:aws:iam::799980351101:user/david",
              "User": "AIDA3UQULNZ67DB2MUL5O"
            },
            "vpc_id": "vpc-0242c71dd31d6686a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ad27ed76e019b7a5",
            "owner_id": "799980351101",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03e88b11e416c8653",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Account": "799980351101",
              "InfraName": "k1",
              "Owner": "arn:aws:iam::799980351101:user/david",
              "User": "AIDA3UQULNZ67DB2MUL5O"
            },
            "vpc_id": "vpc-0242c71dd31d6686a"
          },
          "depends_on": [
            "aws_internet_gateway.default_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k1_public_subnet_asoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05adf6ce2f7ca9de4",
            "route_table_id": "rtb-0ad27ed76e019b7a5",
            "subnet_id": "subnet-04e0f521a684f77cd"
          },
          "depends_on": [
            "aws_route_table.public_route",
            "aws_subnet.k1_public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cloud-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:799980351101:security-group/sg-00784a9c4f9bc1591",
            "description": "Security group that allows public ingress over SSH.",
            "egress": [],
            "id": "sg-00784a9c4f9bc1591",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cloud-ssh",
            "name_prefix": null,
            "owner_id": "799980351101",
            "revoke_rules_on_delete": false,
            "tags": {
              "Account": "799980351101",
              "InfraName": "k1",
              "Owner": "arn:aws:iam::799980351101:user/david",
              "User": "AIDA3UQULNZ67DB2MUL5O"
            },
            "timeouts": null,
            "vpc_id": "vpc-0242c71dd31d6686a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k1_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:799980351101:security-group/sg-0aa28f6268cec484b",
            "description": "Network rules for k1 env",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0aa28f6268cec484b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "k1_security_group",
            "name_prefix": null,
            "owner_id": "799980351101",
            "revoke_rules_on_delete": false,
            "tags": {
              "Account": "799980351101",
              "InfraName": "k1",
              "Name": "k1_security_group",
              "Owner": "arn:aws:iam::799980351101:user/david",
              "User": "AIDA3UQULNZ67DB2MUL5O",
              "infra_name": "k1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0242c71dd31d6686a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-public-egress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:799980351101:security-group/sg-079acd7c4da2920bc",
            "description": "Security group that allows egress to the internet for instances over HTTP and HTTPS.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-079acd7c4da2920bc",
            "ingress": [],
            "name": "web-public-egress",
            "name_prefix": null,
            "owner_id": "799980351101",
            "revoke_rules_on_delete": false,
            "tags": {
              "Account": "799980351101",
              "InfraName": "k1",
              "Owner": "arn:aws:iam::799980351101:user/david",
              "User": "AIDA3UQULNZ67DB2MUL5O"
            },
            "timeouts": null,
            "vpc_id": "vpc-0242c71dd31d6686a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-public-ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:799980351101:security-group/sg-0040084a2cf7f4e7e",
            "description": "Security group that allows public ingress to instances, HTTP, HTTPS and more.",
            "egress": [],
            "id": "sg-0040084a2cf7f4e7e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "web-public-ingress",
            "name_prefix": null,
            "owner_id": "799980351101",
            "revoke_rules_on_delete": false,
            "tags": {
              "Account": "799980351101",
              "InfraName": "k1",
              "Owner": "arn:aws:iam::799980351101:user/david",
              "User": "AIDA3UQULNZ67DB2MUL5O"
            },
            "timeouts": null,
            "vpc_id": "vpc-0242c71dd31d6686a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k1_public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:799980351101:subnet/subnet-04e0f521a684f77cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04e0f521a684f77cd",
            "map_public_ip_on_launch": true,
            "owner_id": "799980351101",
            "tags": {
              "Account": "799980351101",
              "InfraName": "k1",
              "Name": "k1-default-public-subnet",
              "Owner": "arn:aws:iam::799980351101:user/david",
              "Type": "Public",
              "User": "AIDA3UQULNZ67DB2MUL5O",
              "infra_name": "k1"
            },
            "vpc_id": "vpc-0242c71dd31d6686a"
          },
          "depends_on": [
            "aws_vpc.cloud"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloud",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:799980351101:vpc/vpc-0242c71dd31d6686a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01a4f8775dbe89c80",
            "default_route_table_id": "rtb-07893d9dc193e00b0",
            "default_security_group_id": "sg-09b02352d7e8b6eb4",
            "dhcp_options_id": "dopt-303b6f58",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0242c71dd31d6686a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07893d9dc193e00b0",
            "owner_id": "799980351101",
            "tags": {
              "Account": "799980351101",
              "InfraName": "k1",
              "Name": "k1",
              "Owner": "arn:aws:iam::799980351101:user/david",
              "User": "AIDA3UQULNZ67DB2MUL5O"
            }
          }
        }
      ]
    }
  ]
}